<resources>
    <string name="app_name">Morse</string>
    <string name="facebook_app_id">292575252317805</string>
    <string name="phone_number">Phone number</string>
    <string name="type_message">Type Message</string>
    <string name="send">Send</string>
    <string name="send_message">Send Message</string>
    <string name="tweet">Tweet</string>
    <string name="post_reddit">Enter some text</string>
    <string name="post_title">Title</string>
    <string name="delayed_tweet">Post delayed tweet</string>
    <string name="reddit_post">Post</string>
    <string name="hello_twitter">Hello, %1$s</string>
    <string name="send_text">Send a message to %1$s</string>
    <string name="post_tweet">Tell your followers something</string>
    <string name="hint">What\'s Happening?</string>
    <string name="login_button">Login</string>
    <string name="delay">delay</string>
    <string name="delayed">Send delayed message</string>
    <string name="attempts_remaining_text">Number of attempts remaining:</string>
    <string name="attempts_remaining">3</string>
    <string name="userPassword">Password</string>
    <string name="user_credential">Phone, email or username</string>
    <string name="twitter_logo_image">Twitter logo image</string>
    <string name="enter_name">Enter name:</string>
    <string name="enter_password">Enter Password:</string>
    <string name="login">Login</string>
    <string name="no_of_attempts_remaining_3">No. of attempts remaining: 3</string>
    <string name="morse">Morse</string>
    <string name="contacts">Contacts</string>
    <string name="main_title">Main Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="name_contact">Name Contact</string>
    <string name="message">Message</string>
    <string name="attempts">No. of attempts remaining: %1$d</string>
    <string name="sign_in_with_reddit">Sign In With Reddit</string>
    <string name="your_subreddits">Your Subreddits:</string>
    <string name="title_activity_main">Choose an account</string>
    <string name="comment_karma">%s comment karma</string>
    <string name="link_karma">%s link karma</string>
    <string name="access_token_status">Access token expires in %d minutes</string>
    <string name="access_token_status_short">Expires in %d minutes</string>
    <string name="no_refresh_token">No refresh token on hand</string>
    <string name="refresh_token">Refresh token on hand</string>
    <string name="logout">Logout</string>
    <string name="no_stored_data">There\'s nothing here ¯\\_(ツ)_/¯</string>
    <string name="new_user">New user</string>
    <string name="access_token_expired">Access token expired</string>
</resources>